<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">



    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar_certified"></include>


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/button_check"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:background="@color/colorToolBarCertified"
                android:onClick="check"
                android:text="@string/certificado_check" />

            <Button
                android:id="@+id/button_next"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:background="@color/colorToolBarCertified"
                android:onClick="next"
                android:text="@string/certificado_next" />

            <Button
                android:id="@+id/button_reload"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:background="@color/colorToolBarCertified"
                android:onClick="reload"
                android:text="@string/certificado_reload" />

            <Button
                android:id="@+id/button_finish"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginRight="5dp"
                android:background="@color/colorToolBarCertified"
                android:onClick="finish"
                android:text="@string/certificado_finish" />
        </LinearLayout>


        <TextView
            android:id="@+id/text_view_question"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:text="Question"
            android:textColor="@color/fontColorwhite"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/answers_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:text="@string/certificado_answers"
            android:textColor="@color/colorToolBarCertified"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/explanation"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="20dp"
            android:text="@string/certificado_answers"
            android:textColor="@color/colorToolBarCertified"
            android:textSize="18dp" />


        <RadioGroup
            android:id="@+id/radio_answers"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"></RadioGroup>


    </LinearLayout>

</ScrollView>